# VectorSight

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.json
src/field_coordinate/: __init__.py  __main__.py  camera_geometry.py  cli.py  config.py  coordinates.py  debug.py  hardware.py  models.py  pipeline.py  state.py  telemetry.py  vision.py
tests/: test_camera_geometry.py  test_config_cli_vision.py  test_coordinates.py  test_legacy_features.py  test_pipeline.py  test_telemetry.py
