[project]
name = "vectorsight"
version = "0.1.0"
description = "VectorSight is a field-ready vision-to-coordinate system that converts camera detections, focal-length calibration, PX4 telemetry, and reachability logic into reliable target position estimates."
authors = [{ name = "Cem Berk Çakır" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
vision = [
    "opencv-python>=4.7",
    "numpy>=1.21",
]
px4 = [
    "pymavlink>=2.4",
]
hardware = [
    "RPi.GPIO>=0.7; platform_system == 'Linux'",
    "smbus2>=0.4; platform_system == 'Linux'",
]
dev = [
    "opencv-python>=4.7",
    "numpy>=1.21",
    "pymavlink>=2.4",
    "pytest>=8",
    "pytest-cov>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
