[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorsight"
version = "0.1.0"
description = "VectorSight is a field-ready vision-to-coordinate system that converts camera detections, focal-length calibration, PX4 telemetry, and reachability logic into reliable target position estimates."
authors = [{ name = "Cem Berk Çakır" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = [
    "computer-vision",
    "coordinates",
    "drone",
    "mavlink",
    "px4",
    "target-geolocation",
    "uav",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Agueria/VectorSight"
Repository = "https://github.com/Agueria/VectorSight"
Issues = "https://github.com/Agueria/VectorSight/issues"

[project.scripts]
vectorsight = "field_coordinate.cli:main"

[project.optional-dependencies]
vision = [
    "opencv-python>=4.7",
    "numpy>=1.21",
]
px4 = [
    "pymavlink>=2.4",
]
hardware = [
    "RPi.GPIO>=0.7; platform_system == 'Linux'",
    "smbus2>=0.4; platform_system == 'Linux'",
]
dev = [
    "build>=1.2",
    "opencv-python>=4.7",
    "numpy>=1.21",
    "pymavlink>=2.4",
    "pytest>=8",
    "pytest-cov>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
